update jdk version